2007-07-27  Simon Hausmann  <hausmann@kde.org>

        Done with and reviewed by Lars and Zack.

        Don't use stdout redirection for make_names.pl as it doesn't work under Windows perl (outside cygwin).

        * ksvg2/scripts/make_names.pl:

2007-07-27  Simon Hausmann  <hausmann@kde.org>

        Done with and reviewed by Lars and Zack.

        Fix DocTypeStrings.cpp generation to work on Windows with cmd.exe

        * WebCore.pro:

2007-07-27  Simon Hausmann  <hausmann@kde.org>

        Reviewed by Lars.

        Work around aliasing bugs in WebCore by compiling with -fno-strict-aliasing for gcc builds for now.

        * WebCore.pro:

2007-07-27  Simon Hausmann  <hausmann@kde.org>

        Reviewed by Lars.

        Use -Wreturn-type only when compiling with g++

        * WebCore.pro:

2007-07-27  Simon Hausmann  <hausmann@kde.org>

        Reviewed by Zack.

        Don't use pkg-config on Windows for the Qt build

        * WebCore.pro:

2007-07-27  Simon Hausmann  <hausmann@kde.org>

        Reviewed by Zack.

        Fix compilation with MSVC.

        * platform/graphics/qt/ImageDecoderQt.cpp:

2007-07-26  Tristan O'Tierney  <tristan@apple.com>

        Reviewed by Anders Carlsson.

        <rdar://problem/5350019> REGRESSION: Pages on milliyet.com are added to Back list when visited, causing Back button to just reload

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::continueFragmentScrollAfterNavigationPolicy):
        If the policy action is FrameLoadTypeRedirectLockHistory, don't add the frame load url to the history.

2007-07-26  Anders Carlsson  <andersca@apple.com>

        Reviewed by Geoff.

        Add a FIXME about caching pages with plug-ins that have outstanding NPObjects.
        
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::canCachePage):

2007-07-26  David Hyatt  <hyatt@apple.com>
